
name:                latex-tree
version:             0.1.0.0
synopsis:            like the tree command, but emits the structure of a latex document defined by it's input statements
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jimmy Brisson
maintainer:          theotherjimmy@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable latex-tree
  main-is:             latex-tree.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       attoparsec >= 0.13,
                       optparse-applicative >= 0.12,
                       text >= 1.2,
                       bytestring >= 0.10,
                       filepath >= 1.4
  -- hs-source-dirs:      
  default-language:    Haskell2010